add setter for PdfDocumentWithHilights to be shown

--- a/projects/pdf-highlighter-test/src/app/app.component.html
+++ b/projects/pdf-highlighter-test/src/app/app.component.html
@@ -11,6 +11,7 @@
   <button id="resetButton" (click)="resetHighlights()">
     Reset Highlights
   </button>
+  <button id="resetButton" (click)="setPdfDocument()">Set Document</button>
   <ul>
     <li
       class="l-item"
