--- a/projects/pdf-highlighter-test/src/app/app.component.html
+++ b/projects/pdf-highlighter-test/src/app/app.component.html
@@ -1,28 +1,112 @@
-<div class="column_left">
-  <lib-pdf-highlighter
-    #pdfViewer
-    (new-highlight-created)="handleNewHighlight($event)"
-    (new-pdfdocumentwithhighlights-created)="handleNewDocument($event)"
-  ></lib-pdf-highlighter>
-</div>
-<div class="column_right">
-  <button id="zoomInButton" (click)="increaseZoom()">+</button>
-  <button id="zoomOutButton" (click)="decreaseZoom()">-</button>
-  <button id="resetButton" (click)="resetHighlights()">
-    Reset Highlights
-  </button>
-  <button id="resetButton" (click)="setPdfDocument()">Set Document</button>
-  <ul>
-    <li
-      class="l-item"
-      *ngFor="let highlight of highlights"
-      [style.borderColor]="highlight.color"
-    >
-      <strong class="l-marker">id: {{ highlight.groupId }}</strong>
+<div style="width: 100vw; height: 100vh; background: rgb(219, 219, 219);">
+  <as-split direction="horizontal">
+    <as-split-area [size]="70" minSize="40" maxSize="85">
+      <lib-pdf-highlighter
+        #pdfViewer
+        (new-highlight-created)="handleNewHighlight($event)"
+        (new-pdfdocumentwithhighlights-created)="handleNewDocument($event)"
+      ></lib-pdf-highlighter>
+    </as-split-area>
+    <as-split-area [size]="30" minSize="15" maxSize="60">
+      <div class="container mt-1">
+        <div class="btn-group shadow" role="group">
+          <button
+            (click)="increaseZoom()"
+            type="button"
+            class="btn btn-outline-primary btn-sm"
+          >
+            <svg
+              width="1em"
+              height="1em"
+              viewBox="0 0 16 16"
+              class="bi bi-zoom-in"
+              fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"
+              />
+              <path
+                d="M10.344 11.742c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1 6.538 6.538 0 0 1-1.398 1.4z"
+              />
+              <path
+                fill-rule="evenodd"
+                d="M6.5 3a.5.5 0 0 1 .5.5V6h2.5a.5.5 0 0 1 0 1H7v2.5a.5.5 0 0 1-1 0V7H3.5a.5.5 0 0 1 0-1H6V3.5a.5.5 0 0 1 .5-.5z"
+              />
+            </svg>
+          </button>
+          <button
+            (click)="decreaseZoom()"
+            type="button"
+            class="btn btn-outline-primary btn-sm"
+          >
+            <svg
+              width="1em"
+              height="1em"
+              viewBox="0 0 16 16"
+              class="bi bi-zoom-out"
+              fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"
+              />
+              <path
+                d="M10.344 11.742c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1 6.538 6.538 0 0 1-1.398 1.4z"
+              />
+              <path
+                fill-rule="evenodd"
+                d="M3 6.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z"
+              />
+            </svg>
+          </button>
+          <button
+            (click)="resetHighlights()"
+            type="button"
+            class="btn btn-outline-secondary btn-sm"
+          >
+            Reset Highlights
+          </button>
+          <button
+            (click)="setPdfDocument()"
+            type="button"
+            class="btn btn-outline-secondary btn-sm"
+          >
+            Set Document
+          </button>
+        </div>
+      </div>
 
-      {{ highlight.containedText }}
-    </li>
-  </ul>
+      <div
+        *ngFor="let highlight of highlights"
+        class="card m-3 shadow"
+        [style.borderColor]="highlight.color"
+      >
+        <div class="card-header" [style.backgroundColor]="highlight.color">
+          <span class="badge badge-light">id:</span>
+          {{ highlight.groupId }}
+          <button
+            (click)="deleteHighlight(highlight.groupId)"
+            type="button"
+            class="close"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="card-body">
+          <!--h6 class="card-title">Text Content:</h6-->
+          <p class="card-text text-muted blockquote">
+            <small>{{
+              highlight.containedText.length > 85
+                ? (highlight.containedText | slice: 0:85) + "..."
+                : highlight.containedText
+            }}</small>
+          </p>
+        </div>
+      </div>
+    </as-split-area>
+  </as-split>
 </div>
-
-<router-outlet></router-outlet>
