--- a/projects/pdf-highlighter-test/src/app/app.component.scss
+++ b/projects/pdf-highlighter-test/src/app/app.component.scss
@@ -20,3 +20,19 @@ ul {
   padding: 3px;
   font-size: smaller;
 }
+
+.card-header {
+  padding: 0.2em;
+}
+
+.card-body {
+  padding: 0.3em;
+}
+
+.btn-group-xs > .btn,
+.btn-xs {
+  padding: 0.25rem 0.4rem;
+  font-size: 0.875rem;
+  line-height: 0.5;
+  border-radius: 0.2rem;
+}
