--- a/projects/pdf-highlighter-test/src/app/app.component.scss
+++ b/projects/pdf-highlighter-test/src/app/app.component.scss
@@ -49,3 +49,15 @@ ul {
   background: #c5c6c7;
   border-radius: 8px;
 }
+
+#importantInformation {
+  position: fixed;
+  width: 500px;
+  height: 300;
+  top: 50%;
+  left: 50%;
+  margin-top: -150px;
+  margin-left: -250px;
+  z-index: 9999;
+  border: 5px solid black;
+}
