improve demo a bit.

--- a/projects/pdf-highlighter-test/src/app/app.component.html
+++ b/projects/pdf-highlighter-test/src/app/app.component.html
@@ -1,7 +1,15 @@
 <nav class="navbar navbar-light bg-light" [style.height]="'3vh'">
   <span [style.position]="'fixed'" [style.top]="'1px'"
-    >angular pdf highlighter <strong>DEMO</strong></span
-  >
+    >angular pdf highlighter <strong>DEMO</strong>
+
+    <a
+      [style.position]="'fixed'"
+      [style.right]="'15px'"
+      href="https://github.com/christophersperl/angular-pdf-highlighter"
+    >
+      <img alt="GithubLogo" src="assets/GitHub-Mark-32px.png" height="18px" />
+    </a>
+  </span>
 </nav>
 <div style="width: 100vw; height: 97vh; background: rgb(219, 219, 219);">
   <as-split direction="horizontal">
